# Image_description_search

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
app/core/: handlers.py  image_to_text.py
app/data/: models.py  request.py
app/services/: llama_integration.py
app/tools/: utils.py
